@@ -1,12 +1,9 @@
 package pl.futurecollars.invoicing.service;
 
-import com.fasterxml.jackson.databind.JavaType;
-import com.fasterxml.jackson.databind.ObjectMapper;
-import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.ArrayList;
+import java.nio.file.StandardOpenOption;
 import java.util.List;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -16,38 +13,20 @@ import org.springframework.stereotype.Service;
 @Service
 @RequiredArgsConstructor
 public class FileService {
-  private final ObjectMapper objectMapper;
 
-  public void writeDataToFile(String fileName, Object object) {
-    log.debug("write data to file = {}", fileName);
-    try {
-      objectMapper.writeValue(new File(fileName), object);
-    } catch (IOException e) {
-      throw new RuntimeException(e);
-    }
+  public void appendLineToFile(Path path, String line) throws IOException {
+    Files.write(path, (line + System.lineSeparator()).getBytes(), StandardOpenOption.APPEND);
   }
 
-  public <T> List<T> getDataFromFile(String fileName, Class<T> c) {
-    log.debug("get data from file = {}", fileName);
-    try {
-      JavaType type = objectMapper.getTypeFactory().constructParametricType(List.class, c);
-      File file = new File(fileName);
-      if (file.length() != 0) {
-        return objectMapper.readValue(new File(fileName), type);
-      }
-    } catch (IOException e) {
-      log.debug("problem reading data from file (" + fileName + "), will be treated as empty db, " + e);
-    }
-    return new ArrayList<>();
+  public void writeToFile(Path path, String line) throws IOException {
+    Files.write(path, line.getBytes(), StandardOpenOption.TRUNCATE_EXISTING);
   }
 
-  public long readLastIdFromDb(String dbPath) {
-    log.debug("read id from file = {}", dbPath);
-    try {
-      String lastId = Files.readString(Path.of(dbPath));
-      return Long.parseLong(lastId);
-    } catch (Exception e) {
-      return 0L;
-    }
+  public void writeLinesToFile(Path path, List<String> lines) throws IOException {
+    Files.write(path, lines, StandardOpenOption.TRUNCATE_EXISTING);
+  }
+
+  public List<String> readAllLines(Path path) throws IOException {
+    return Files.readAllLines(path);
   }
 }
